first version with working broadcast and update of displays, always updates three displays at once

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,14 +37,14 @@
 
             <div class="row">
                 <div class="col-lg-6">
-                    <form class="form-horizontal">
+                    <form class="form-horizontal" id="leftform">
                         <fieldset>
                             <legend>Anzeige links</legend>
 
                             <div class="form-group">
                                 <label class="col-md-4 control-label" for="lineLeft">Linie</label>
                                 <div class="col-md-8">
-                                    <select id="lineLeft" name="lineLeft" class="form-control">
+                                    <select id="lineLeft" name="lineLeft" class="form-control" data-address="3">
                                     </select><!-- #line1 /.form-control -->
                                 </div><!-- /.col-md-8 -->
                             </div><!-- /.form-group -->
@@ -52,7 +52,7 @@
                             <div class="form-group">
                                 <label class="col-md-4 control-label" for="destLeft">Ziel</label>
                                 <div class="col-md-8">
-                                    <select id="destLeft" name="destLeft" class="form-control">
+                                    <select id="destLeft" name="destLeft" class="form-control" data-address="1">
                                     </select><!-- #selectbasic /.form-control -->
                                 </div><!-- /.col-md-8 -->
                             </div><!-- /.form-group -->
@@ -60,7 +60,7 @@
                             <div class="form-group">
                                 <label class="col-md-4 control-label" for="descLeft">Beschreibung</label>
                                 <div class="col-md-8">
-                                    <select id="descLeft" name="descLeft" class="form-control">
+                                    <select id="descLeft" name="descLeft" class="form-control" data-address="2">
                                     </select><!-- #selectbasic /.form-control -->
                                 </div><!-- /.col-md-8 -->
                             </div><!-- /.form-group -->
@@ -92,14 +92,14 @@
                     </form><!-- /.form-horizontal -->
                 </div><!-- /.col-lg-6 -->
                 <div class="col-lg-6">
-                    <form class="form-horizontal">
+                    <form class="form-horizontal" id="rightform">
                         <fieldset>
                             <legend>Anzeige rechts</legend>
 
                             <div class="form-group">
                                 <label class="col-md-4 control-label" for="lineRight">Linie</label>
                                 <div class="col-md-8">
-                                    <select id="lineRight" name="lineRight" class="form-control">
+                                    <select id="lineRight" name="lineRight" class="form-control" data-address="6">
                                     </select><!-- #line2 /.form-control -->
                                 </div><!-- /.col-md-8 -->
                             </div><!-- /.form-group -->
@@ -107,7 +107,7 @@
                             <div class="form-group">
                                 <label class="col-md-4 control-label" for="destRight">Ziel</label>
                                 <div class="col-md-8">
-                                    <select id="destRight" name="destRight" class="form-control">
+                                    <select id="destRight" name="destRight" class="form-control" data-address="4">
                                     </select><!-- #selectbasic /.form-control -->
                                 </div><!-- /.col-md-8 -->
                             </div><!-- /.form-group -->
@@ -115,7 +115,7 @@
                             <div class="form-group">
                                 <label class="col-md-4 control-label" for="descRight">Beschreibung</label>
                                 <div class="col-md-8">
-                                    <select id="descRight" name="descRight" class="form-control">
+                                    <select id="descRight" name="descRight" class="form-control" data-address="5">
                                     </select><!-- #selectbasic /.form-control -->
                                 </div><!-- /.col-md-8 -->
                             </div><!-- /.form-group -->
