--- a/templates/index.html
+++ b/templates/index.html
@@ -37,14 +37,14 @@
 
             <div class="row">
                 <div class="col-lg-6">
-                    <form class="form-horizontal" id="leftform">
+                    <form class="form-horizontal" id="leftform" data-hostname="alice">
                         <fieldset>
                             <legend>Anzeige links</legend>
 
                             <div class="form-group">
                                 <label class="col-md-4 control-label" for="lineLeft">Linie</label>
                                 <div class="col-md-8">
-                                    <select id="lineLeft" name="lineLeft" class="form-control" data-address="alice:3">
+                                    <select id="lineLeft" name="lineLeft" class="form-control" data-address="3">
                                     </select><!-- #line1 /.form-control -->
                                 </div><!-- /.col-md-8 -->
                             </div><!-- /.form-group -->
@@ -52,7 +52,7 @@
                             <div class="form-group">
                                 <label class="col-md-4 control-label" for="destLeft">Ziel</label>
                                 <div class="col-md-8">
-                                    <select id="destLeft" name="destLeft" class="form-control" data-address="alice:1">
+                                    <select id="destLeft" name="destLeft" class="form-control" data-address="1">
                                     </select><!-- #selectbasic /.form-control -->
                                 </div><!-- /.col-md-8 -->
                             </div><!-- /.form-group -->
@@ -60,7 +60,7 @@
                             <div class="form-group">
                                 <label class="col-md-4 control-label" for="descLeft">Beschreibung</label>
                                 <div class="col-md-8">
-                                    <select id="descLeft" name="descLeft" class="form-control" data-address="alice:2">
+                                    <select id="descLeft" name="descLeft" class="form-control" data-address="2">
                                     </select><!-- #selectbasic /.form-control -->
                                 </div><!-- /.col-md-8 -->
                             </div><!-- /.form-group -->
@@ -68,10 +68,10 @@
                             <div class="form-group">
                                 <label class="col-md-4 control-label" for="colorRGBLeft">Beleuchtung</label>
                                 <div class="col-md-3">
-                                    <input type="color" id="colorRGBLeft" class="form-control" value="#88cde8" data-address="alice:rgb" />
+                                    <input type="color" id="colorRGBLeft" class="form-control" value="#88cde8" data-address="rgb" />
                                 </div>
                                 <div class="col-md-3">
-                                    <input id="colorWWLeft" data-slider-id='colorWWLeftSlider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="50" data-address="alice:ww" />
+                                    <input id="colorWWLeft" data-slider-id='colorWWLeftSlider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="127" data-address="ww" />
                                 </div>
                                 <div class="col-md-3 col-md-offset-4">
                                     <p><small>RGB</small></p>
@@ -84,7 +84,7 @@
                             <div class="form-group">
                                 <label class="col-md-4 control-label" for="signLeftActions"></label>
                                 <div class="col-md-8">
-                                    <button id="signLeftGo" name="signLeftActions" class="btn btn-primary">Anwenden</button>
+                                    <button id="signLeftGo" name="signLeftActions" class="btn btn-primary apply-btn">Anwenden</button>
                                     <button id="randLeft" name="randLeft" class="btn btn-default">Zufällig</button>
                                 </div><!-- /.col-md-4 -->
                             </div><!-- /.form-group -->
@@ -92,14 +92,14 @@
                     </form><!-- /.form-horizontal -->
                 </div><!-- /.col-lg-6 -->
                 <div class="col-lg-6">
-                    <form class="form-horizontal" id="rightform">
+                    <form class="form-horizontal" id="rightform" data-hostname="alice">
                         <fieldset>
                             <legend>Anzeige rechts</legend>
 
                             <div class="form-group">
                                 <label class="col-md-4 control-label" for="lineRight">Linie</label>
                                 <div class="col-md-8">
-                                    <select id="lineRight" name="lineRight" class="form-control" data-address="alice:6">
+                                    <select id="lineRight" name="lineRight" class="form-control" data-address="6">
                                     </select><!-- #line2 /.form-control -->
                                 </div><!-- /.col-md-8 -->
                             </div><!-- /.form-group -->
@@ -107,7 +107,7 @@
                             <div class="form-group">
                                 <label class="col-md-4 control-label" for="destRight">Ziel</label>
                                 <div class="col-md-8">
-                                    <select id="destRight" name="destRight" class="form-control" data-address="alice:4">
+                                    <select id="destRight" name="destRight" class="form-control" data-address="4">
                                     </select><!-- #selectbasic /.form-control -->
                                 </div><!-- /.col-md-8 -->
                             </div><!-- /.form-group -->
@@ -115,7 +115,7 @@
                             <div class="form-group">
                                 <label class="col-md-4 control-label" for="descRight">Beschreibung</label>
                                 <div class="col-md-8">
-                                    <select id="descRight" name="descRight" class="form-control" data-address="alice:5">
+                                    <select id="descRight" name="descRight" class="form-control" data-address="5">
                                     </select><!-- #selectbasic /.form-control -->
                                 </div><!-- /.col-md-8 -->
                             </div><!-- /.form-group -->
@@ -123,10 +123,10 @@
                             <div class="form-group">
                                 <label class="col-md-4 control-label" for="colorRGBRight">Beleuchtung</label>
                                 <div class="col-md-3">
-                                    <input type="color" id="colorRGBRight" class="form-control" value="#88cde8" data-address="alice:rgb" />
+                                    <input type="color" id="colorRGBRight" class="form-control" value="#88cde8" data-address="rgb" />
                                 </div>
                                 <div class="col-md-3">
-                                    <input id="colorWWRight" data-slider-id='colorWWRightSlider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="50" data-address="alice:ww" />
+                                    <input id="colorWWRight" data-slider-id='colorWWRightSlider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="50" data-address="ww" />
                                 </div>
                                 <div class="col-md-3 col-md-offset-4">
                                     <p><small>RGB</small></p>
@@ -139,7 +139,7 @@
                             <div class="form-group">
                                 <label class="col-md-4 control-label" for="signRightActions"></label>
                                 <div class="col-md-8">
-                                    <button id="signRightGo" name="signRightActions" class="btn btn-primary">Anwenden</button>
+                                    <button id="signRightGo" name="signRightActions" class="btn btn-primary apply-btn">Anwenden</button>
                                     <button id="randRight" name="randRight" class="btn btn-default">Zufällig</button>
                                 </div><!-- /.col-md-4 -->
                             </div><!-- /.form-group -->
