fix update bug (no update was sent at the beginning)

--- a/templates/index.html
+++ b/templates/index.html
@@ -92,7 +92,7 @@
                     </form><!-- /.form-horizontal -->
                 </div><!-- /.col-lg-6 -->
                 <div class="col-lg-6">
-                    <form class="form-horizontal" id="rightform" data-hostname="alice">
+                    <form class="form-horizontal" id="rightform" data-hostname="bob">
                         <fieldset>
                             <legend>Anzeige rechts</legend>
 
