--- a/templates/index.html
+++ b/templates/index.html
@@ -167,7 +167,6 @@
                                 <label class="col-md-4 control-label" for="signRightActions"></label>
                                 <div class="col-md-8">
                                     <button id="signRightGo" name="signRightActions" class="btn btn-primary apply-btn">Anwenden</button>
-                                    <!--<button id="randLeft" name="randLeft" class="btn btn-default">Zufällig</button>-->
                                 </div><!-- /.col-md-4 -->
                             </div><!-- /.form-group -->
                         </fieldset>
@@ -176,8 +175,45 @@
                 </form><!-- /.form-horizontal -->
             </div><!-- /.row -->
 
-			<hr />
-	    	<div class="row">
+	    <div class="row" style="">
+            <div class="col-xs-12 text-center" style="margin-top:10px;">
+                <button class="btn btn-primary" id="expert-btn">Expertenmodus</button>
+            </div><!-- /.col -->    
+	    </div><!-- /.row -->
+	    <div class="row" id="expert-mode" style="display: none;">
+            <div class="col-xs-12" style="margin-top:10px;">
+                <form>
+                <h3>Betriebsmodus</h3>
+		        <div class="btn-group" data-toggle="buttons">
+			        <label class="btn btn-primary mode-btn" >
+				        <input type="radio" name="options" id="workshop" autocomplete="off">
+                        <span class="glyphicon glyphicon-blackboard"></span>&nbsp;Workshop
+				    </label>
+					<label class="btn btn-primary mode-btn">
+				        <input type="radio" name="options" id="party" autocomplete="off">
+                        <span class="glyphicon glyphicon-glass"></span>&nbsp;Party
+				    </label>
+				    <label class="btn btn-primary mode-btn">
+					 <input type="radio" name="options" id="normal" autocomplete="off">
+                        <span class="glyphicon glyphicon-cloud"></span>&nbsp;Normal
+					</label>
+		        </div>
+		        <h3 Playlist <small>Position: <span id="position">?</span></small>
+		            <button class="btn btn-danger pull-right" id="playlist-clear-btn">
+                        <span class="glyphicon glyphicon-trash"></span>&nbsp;Löschen</button>
+		            <button class="btn btn-success pull-right" id="playlist-save-btn" style="margin-right: 10px;">
+                        <span class="glyphicon glyphicon-save"></span>&nbsp;Speichern</button>
+		            <button class="btn btn-success pull-right" id="playlist-append-btn" style="margin-right: 10px;">
+                        <span class="glyphicon glyphicon-plus"></span>&nbsp;Hinzufügen</button>
+		        </h3>
+                </form>
+		<p class="clearfix"></p>
+                <textarea class="form-control" id="playlist" style="width: 100%">[{"hostname": "alice", "rgb": "#ff00ff", "ww": "10"}]</textarea>
+                </p>
+            </div><!-- /.col -->    
+	    </div><!-- /.row -->
+	    <hr />
+	    <div class="row">
             	<div class="col-xs-3 col-xs-offset-1 text-right" style="">
 	 				<img class="img-responsive" src="/static/img/dblogo.png" alt="Deutsche Bahn-Logo">	
              	</div><!-- /.col-lg-12 -->
