finished configuration for mindbox

--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div class="row">
-                 <form class="form" id="leftform" data-hostname="alice">
+                 <form class="form" id="leftform" data-hostname="bob">
                     
                      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" >
                         <div style="height: 100px;" class="hidden-xs"></div>
@@ -71,14 +71,14 @@
 
 			                <div class="form-group col-xs-12">
                                 <label class="control-label" for="descLeft">Beschreibung</label>
-                                    <select id="descLeft" name="descLeft" class="form-control" data-address="2">
+                                    <select id="descLeft" name="descLeft" class="form-control" data-address="5">
                                     </select><!-- #selectbasic /.form-control -->
                             </div><!-- /.form-group -->
 
 			                <div class="col-xs-4">
 				                <div class="form-group">
                                     <label class="control-label" for="lineLeft">Linie</label>
-                                        <select id="lineLeft" name="lineLeft" class="form-control" data-address="3">
+                                        <select id="lineLeft" name="lineLeft" class="form-control" data-address="6">
                                         </select><!-- #line1 /.form-control -->
 			                    </div><!-- /.form-group -->
 			                </div>
@@ -86,7 +86,7 @@
 			                <div class="col-xs-8">
                                 <div class="form-group">
                                     <label class="control-label" for="destLeft">Ziel</label>
-                                    <select id="destLeft" name="destLeft" class="form-control" data-address="1">
+                                    <select id="destLeft" name="destLeft" class="form-control" data-address="4">
                                     </select><!-- #selectbasic /.form-control -->
                                 </div><!-- /.form-group -->
 			                </div>
@@ -119,7 +119,7 @@
                     </div><!-- /.col-lg-6 -->
                 </form><!-- /.form-horizontal -->
 
-                <form class="form" id="rightform" data-hostname="bob">
+                <form class="form" id="rightform" data-hostname="alice">
                      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="margin-top: 0px;"> 
                         <h4>Anzeige rechts</h4>
                         <div class="bluebox" style="">
@@ -127,14 +127,14 @@
 
 			                <div class="form-group col-xs-12">
                                 <label class="control-label" for="descRight">Beschreibung</label>
-                                    <select id="descRight" name="descRight" class="form-control" data-address="5">
+                                    <select id="descRight" name="descRight" class="form-control" data-address="2">
                                     </select><!-- #selectbasic /.form-control -->
                             </div><!-- /.form-group -->
 
 			                <div class="col-xs-4">
 				                <div class="form-group">
                                     <label class="control-label" for="lineRight">Linie</label>
-                                        <select id="lineRight" name="lineRight" class="form-control" data-address="6">
+                                        <select id="lineRight" name="lineRight" class="form-control" data-address="3">
                                         </select><!-- #line1 /.form-control -->
 			                    </div><!-- /.form-group -->
 			                </div>
@@ -142,7 +142,7 @@
 			                <div class="col-xs-8">
                                 <div class="form-group">
                                     <label class="control-label" for="destLeft">Ziel</label>
-                                    <select id="destRight" name="destRight" class="form-control" data-address="4">
+                                    <select id="destRight" name="destRight" class="form-control" data-address="1">
                                     </select><!-- #selectbasic /.form-control -->
                                 </div><!-- /.form-group -->
 			                </div>
