--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
                     <img src="/static/img/mindbox_logo_v2.png" alt="minDBox-Logo" style="margin-right: 20px; margin-top: 18px;">
                     </div>
                 <div class="col-xs-8 text-right">
-                    <h2>Zugzielanzeiger</h2>
+                    <h2>Zugzielanzeige</h2>
                 </div>
             </div>
             <div class="row">
